# thought

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.rst  pyproject.toml  scratchpad.ipynb  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/thought/: __init__.py  _version.py  cli.py  client.py  core.py  exceptions.py  service.py  settings.py  utils.py
src/thought/services/: instapaper.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_core.py
